Updated server name for surf to awp

--- a/zeddy_shortcuts.cfg
+++ b/zeddy_shortcuts.cfg
@@ -6,7 +6,7 @@
 
 alias "ze" "connect 103.62.48.12:27058; echo "Joining ZeddY's zombie escape server! Don't stop running and no doorhugging!""
 alias "kz" "connect 103.62.48.3:27068; echo "Joining ZeddY's KZ server! Don't stop strafing and jumping!""
-alias "surf" "connect 139.99.66.58:22020; echo "Joining ZeddY's surf server! Gotta go fast down the ramps!""
+alias "awp" "connect 139.99.66.58:22020; echo "Joining ZeddY's awp server! Time to start flicking fast on those heads!""
 alias "aim" "connect 103.62.48.10:27078; echo "Joining ZeddY's aim arena! Gotta get those sick one-taps!""
 alias "mmod" "connect 103.62.48.4:27068; echo "Joining ZeddY's multimod! Have fun!""
 alias "bhop" "connect 103.107.199.244:27058; echo "Joining ZeddY's bhop server! Gotta keep jumping left and right!"
