--- a/glitchtesting.cfg
+++ b/glitchtesting.cfg
@@ -12,6 +12,7 @@ mp_freezetime 1
 sv_infinite_ammo 1
 sv_enablebunnyhopping 1
 sv_autobunnyhopping 1
+mp_autokick 0
 
 //vision related shit
 r_drawclipbrushes 2
@@ -19,6 +20,8 @@ showtriggers_toggle
 
 //player settings
 god
+
+mp_restartgame 1
 
 //additional keybinrds (make sure to uncomment for those to work)
 //bind f1 noclip
