Update 2020 FPS Config

--- a/fps_configs2020.cfg
+++ b/fps_configs2020.cfg
@@ -57,7 +57,8 @@ m_customaccel "0"
 // change game behavior when connecting to servers
 cl_forcepreload "1" // Preloads The Whole Map & Sounds.
 cl_autohelp "0" //disables autohelp and messages
-cl_disablehtmlmotd "0" // Disables MOTD from servers that require you to load, *edit* set to 0 as there was a possibility this cause client side issue but it may vary from pc to pc.
+cl_disablehtmlmotd "1" // Disables MOTD from community servers
+//cl_disablehtml motd "0" //UNCOMMENT THIS AND DELETE THE LINE ABOVE SHOULD YOU HAVE ISSUES WHEN CONNECTING TO A COMMUNITY SERVER
 cl_showhelp "0"
 
 // change how things are rendered in csgo for more fps boost
