Update Glitch Testing Config

--- a/glitchtesting.cfg
+++ b/glitchtesting.cfg
@@ -1,29 +1,58 @@
+//////////////////////////////////////////////////////
+//              Author: Koen                        //
+//      Special Thanks: Sausage Clicker             //
+//                      for inspiring me to start   //
+//                      glitching maps for testing  //
+//                                                  //
+//             Contact: TheProKoen#4977 [discord]   //
+//                      @/id/itskoenlul [steam]     //
+//                                                  //
+//               Happy Glitch Testing!!!            //
+//                                                  //
+//////////////////////////////////////////////////////
+
+//Put this .cfg file into your csgo installation in steamapps/common/counter strike: global offensive/csgo/cfg folder
+//Load up a map by typing "map <map name>" in console
+//Once into a map, type "exec glitchtesting.cfg" in console and it will load the configs
+
+
 echo "Loading Glitch Testing Config"
 echo "Config made by Koen for testing new maps"
 
 say "Loading Glitch Testing Config"
 say "Config made by Koen for testing new maps"
 
+//force restart the game and end warmup
+mp_restart_game 1
+mp_warmup_end 1
+
 //initial server settings
-sv_cheats 1
-mp_roundtime 60
-mp_round_restart_delay 1
+sv_cheats 1 //Enable Server Cheats so that all console commands work
+mp_roundtime 60 //set round time to 60 [NOTE: this may be overrided by map settings]
+mp_round_restart_delay 1 //set the delay between rounds to 1 second
 mp_freezetime 1
-sv_infinite_ammo 1
-sv_enablebunnyhopping 1
+sv_infinite_ammo 1 //set [1] to [2] if you want infinite ammo but still need to reload
+sv_enablebunnyhopping 1 //you can disable this. I only leave it on to test bhop triggers etc.
 sv_autobunnyhopping 1
-mp_autokick 0
+mp_autokick 0 //To disable you from being banned for too many suicides
 
-//vision related shit
-r_drawclipbrushes 2
-showtriggers_toggle
+//second restart... to make sure shit works
+mp_restart_game 1
+mp_warmup_end 1
 
-//player settings
+//toggle all the dumb vision related shit
+showtriggers_toggle //toggle trigger zones to be displayed visually
+r_drawclipbrushes 2 //draws the clip brushes as solid boxes (Setting to [1] would only draw the edges
+
+//set player to god mode so 
 god
 
-mp_restartgame 1
+//enable developer console to be shown in corner
+//mean to easily display more info without having to open console
+developer 1
 
 //additional keybinrds (make sure to uncomment for those to work)
+//can replace individual keys to other keys if you want
 //bind f1 noclip
 //bind f2 showtriggers_toggle
 //bind f3 thirdperson
