Update Glitch Testing Config

--- a/glitchtesting.cfg
+++ b/glitchtesting.cfg
@@ -29,17 +29,19 @@ mp_warmup_end 1
 
 //initial server settings
 sv_cheats 1 //Enable Server Cheats so that all console commands work
+sv_falldamage_scale 0 //disables fall damage
 mp_roundtime 60 //set round time to 60 [NOTE: this may be overrided by map settings]
 mp_round_restart_delay 1 //set the delay between rounds to 1 second
 mp_freezetime 1
 sv_infinite_ammo 1 //set [1] to [2] if you want infinite ammo but still need to reload
 sv_enablebunnyhopping 1 //you can disable this. I only leave it on to test bhop triggers etc.
 sv_autobunnyhopping 1
+bot_stop 1
 mp_autokick 0 //To disable you from being banned for too many suicides
 
 //second restart... to make sure shit works
 mp_restart_game 1
-mp_warmup_end 1
+mp_warmup_end
 
 //toggle all the dumb vision related shit
 showtriggers_toggle //toggle trigger zones to be displayed visually
