Update Glitch Testing Config

--- a/glitchtesting.cfg
+++ b/glitchtesting.cfg
@@ -25,7 +25,7 @@ say "Config made by Koen for testing new maps"
 
 //force restart the game and end warmup
 mp_restart_game 1
-mp_warmup_end 1
+mp_warmup_end
 
 //initial server settings
 sv_cheats 1 //Enable Server Cheats so that all console commands work
@@ -40,14 +40,14 @@ bot_stop 1
 mp_autokick 0 //To disable you from being banned for too many suicides
 
 //second restart... to make sure shit works
-mp_restart_game 1
+mp_restart_game 5
 mp_warmup_end
 
 //toggle all the dumb vision related shit
 showtriggers_toggle //toggle trigger zones to be displayed visually
 r_drawclipbrushes 2 //draws the clip brushes as solid boxes (Setting to [1] would only draw the edges
 
-//set player to god mode so 
+//set player to god mode
 god
 
 //enable developer console to be shown in corner
