--- a/ze_network_optimizations.cfg
+++ b/ze_network_optimizations.cfg
@@ -1,7 +1,7 @@
-// put in cfg folder of csgo installation, and then execute in-game console
-// steam/steamapps/common/Counter Strike: Global Offensive/csgo/cfg
-// made by koen and tested on zeddy's ze server
-// steamcommunity.com/id/itskoenlul
+//what this config does:
+// removes network cap to allow max network information beint sent between you and the server
+// change cmdrate/updaterate to maximum values (servers will still force it down but this just makes it so you're always using the max value oln the server)
+// change interp for better lag comp
 
 rate "786432"
 cl_cmdrate "128"
