Minor adjustments to CSGO Autoexec Files
-> Changed several descriptions and commentaries on commands and cvars
-> Removed unnecessary commands that are outdated / no longer working in csgo
-> Moved all unnecessary but customizeable commands to bottom of the file

--- a/csgo.cfg
+++ b/csgo.cfg
@@ -1,13 +1,15 @@
-// fps boost config made by koen + Major overhaul/fix by toppi official
+//FPS Boost Config Authors:
+//-> Koen (original creator and maintainer)
+//-> ToppiOfficial (major overhaul and optimizations)
+
 // put this in your csgo folder in steam/steamapps/common/Counter Strike: Global Offensive/csgo/cfg folder and name it autoexec.cfg
 // put {+exec autoexec.cfg} in launch option
 // it is recommended that you make a backup of your current config in case things dont work out
 
-//THERE ARE A FEW OPTIONAL SETTINGS, JUST UNCOMMENT THE COMMANDS
-//MAKE SURE TO READ THE COMMENTARY PER COMMAND
-
+//several settings  are optional; just uncomment commands as you wish (MAKE SURE TO READ THE COMMENTARY PER COMMAND)
 //IT IS RECOMMEND TO EXECUTE THIS ONLY ON THE MENU OR A SOLO SERVER AND NOT DURING INGAME.
 
+clear
 echo "Executing fps boost..."
 
 // removes all download filters so you download all server files automatically
@@ -22,9 +24,6 @@ snd_mix_async "1"
 cl_interp "0"
 cl_interp_ratio "1"
 
-// ignores dedicated servers with pings above this value.
-//mm_dedicated_search_maxping "150"  //Consider to be unecessary if you often play community servers
-
 // network commands for best experience on ZE, This require some adjustments to the user's settings and speed on their network.
 rate "786432"
 cl_cmdrate "128"
@@ -34,18 +33,6 @@ cl_interp "0"
 cl_lagcompensation "1"
 cl_predict "1"
 cl_predictweapons "1"
-
-// causes the scope to move less while moving scoped and reduces bobbing effect
-cl_bobcycle "1.0"
-
-//This controls how the viewmodel shakes/wiggles around when you are moving. (Personal settings)
-//autoexec disabled
-//cl_bob_lower_amt "10"
-//cl_bobamt_lat "0.33"
-//cl_bobamt_vert "0.14"
-
-// sets the size of the hud
-//hud_scaling "0.85" //you can set your own size - 0.065 -> 1.00
 
 // disable mouse acceleration and enable raw input for low latency
 m_customaccel "0"
@@ -57,38 +44,23 @@ m_customaccel "0"
 // change game behavior when connecting to servers
 cl_forcepreload "1" // Preloads The Whole Map & Sounds.
 cl_autohelp "0" //disables autohelp and messages
-cl_disablehtmlmotd "1" // Disables MOTD from community servers
-//cl_disablehtml motd "0" //UNCOMMENT THIS AND DELETE THE LINE ABOVE SHOULD YOU HAVE ISSUES WHEN CONNECTING TO A COMMUNITY SERVER
+cl_disablehtmlmotd "1" // Disables MOTD from community servers (SET TO 1 IF YOU SEEM TO HAVE ISSUES JOINING SERVERS)
 cl_showhelp "0"
 
 // change how things are rendered in csgo for more fps boost
 r_dynamic "1"			//There had been some speculation disabling this cause client issue so you must test this values yourself. 0 - disabled, 1 - enable
 r_drawtracers "0"
 r_drawtracers_firstperson "0"
-
-//CSGO Doesn't use facial features for their model rendering this settings useless and can cause client side issues.
-//r_eyegloss "0" // No Makeup.
-//r_eyemove "0" // No Eye Movement.
-//r_eyeshift_x "0" // No Eye Movement X-Angel.
-//r_eyeshift_y "0" // No Eye Movement Y-Angel.
-//r_eyeshift_z "0" // No Eye Movement Z-Angel.
-//r_eyesize "0" // Smaller Eyes.
  
-// This is disabled by Toppi as there are issues on clearing decals on custom maps on Zombie escape.
-// bind f "r_cleardecals; +lookatweapon" //Press F to clear decals and inspectgun
-
 fps_max "300" //Setting this to 0 will uncap it but will load maps 90 seconds slower. 
-//600 gave me the best results. - koen
 // In ToppiOfficial's opinion is best to cap the fps about twice as the refresh rate of your monitor as pushing your frames to its max can cause fps jitter and stutter therefor only cap it what your twice the average fps (average of 60fps=120)(as there is no point capping like 300 if your rig can only handle like 80fps.
 
-fps_max_menu "120" //Frame limiting my menu to 300 because I can.
-//Edit to 120 because the fps of the menu doesn't affect anything and you would only get more memory usage on highcap fps by just being on the menu.
+fps_max_menu "120" //Cap main menu fps since rendering anything more than that would reset in wasted memory usage and wasted power consuption
 
-net_graph "1" //Shows my network usage data
-
-net_graphheight "32" //Changes height, used together with script
-net_graphpos "2" //Positioning of Net Graph
-net_graphproportionalfont "0" //Makes font smaller
+net_graph "1" //Shows network usage data
+net_graphheight "32" //Changes the position of netgraph vertically
+net_graphpos "2" //Positioning of Net Graph (0=left 1=right 2=middle)
+net_graphproportionalfont "0" //Makes font smaller (0=small 1=large)
 //Net grap position is the user's preference so you should tweak this before removing the "//"
 
 net_graphmsecs "400" //The latency graph represents this many milliseconds
@@ -98,8 +70,23 @@ net_graphsolid "1" //Solid Net Graph
 net_graphtext "1" //Shows text fields
 net_maxroutable "1200" //Requested max packet size before packets are 'split' - if suffering high ping or rubber banding, switched to 1150 or 1100 (dont go too low as lower values can make it worst)
 
-//net_scale "2.5" //Makes font smaller - Doesn't function properly ever since csgo left the beta branch (valve..) (can still work some times or half of the time)
-
 host_writeconfig
+
+//----UNUSED OPTIONAL COMMANDS----//
+// ignores dedicated servers with pings above this value.
+//mm_dedicated_search_maxping "150"  //Consider to be unecessary if you often play community servers
+
+//This controls how the viewmodel shakes/wiggles around when you are moving. (Personal settings)
+//autoexec disabled
+//cl_bob_lower_amt "10"
+//cl_bobamt_lat "0.33"
+//cl_bobamt_vert "0.14"
+//cl_bobcycle "1.0"
+
+// sets the size of the hud
+//hud_scaling "0.85" //you can set your own size - 0.065 -> 1.00
+
+// Clears decals on maps when firing your weapon (clears bullet holes / blood splatters / sprays etc.)
+// bind mouse1 "+attack; r_cleardecals"
 
 echo "Finished loading fps boost config"
