simplified explanation on several configs and scripts

--- a/glitchtesting.cfg
+++ b/glitchtesting.cfg
@@ -1,27 +1,9 @@
-//////////////////////////////////////////////////////
-//                                                  //
-//              Author: Koen                        //
-//      Special Thanks: Sausage Clicker             //
-//                      for inspiring me to start   //
-//                      glitching maps for testing  //
-//                                                  //
-//             Contact: TheProKoen#4977 [discord]   //
-//                      @/id/itskoenlul [steam]     //
-//                                                  //
-//               Happy Glitch Testing!!!            //
-//                                                  //
-//////////////////////////////////////////////////////
-
 //Put this .cfg file into your csgo installation in steamapps/common/counter strike: global offensive/csgo/cfg folder
 //Load up a map by typing "map <map name>" in console
-//Once into a map, type "exec glitchtesting.cfg" in console and it will load the configs
+//Once into a map, type "exec glitchtesting.cfg" in console and it will load the config
 
-
+clear
 echo "Loading Glitch Testing Config"
-echo "Config made by Koen for testing new maps"
-
-say "Loading Glitch Testing Config"
-say "Config made by Koen for testing new maps"
 
 //force restart the game and end warmup
 mp_restart_game 1
@@ -62,4 +44,3 @@ developer 1
 //bind f4 firstperson
 
 echo "glitch testing config loaded"
-say "glitch testing config loaded"
