--- a/quickswitch.cfg
+++ b/quickswitch.cfg
@@ -1,10 +1,7 @@
 // quick switch bind - switches from your current gun to the next slot available (for rifle -> pistol and then back)
 // replaces the need to press "q" twice to switch between guns; just need to press once to switch guns back and forth
-// put in config folder in csgo installation
-// steam/steamapps/common/Counter Strike: Global Offensive/csgo/cfg
 // made by koen (steamcommunity.com/id/itskoenlul)
-// feel free to change the key "q" to something else
 
 alias +quickswitch "invnext;"
 alias -quickswitch "slot3; slot2; slot1;"
-bind "q" +quickswitch
+bind "q" +quickswitch //can replace Q to any other key of your choice
