Update CSGO fps boost config

--- a/csgo.cfg
+++ b/csgo.cfg
@@ -34,6 +34,9 @@ cl_lagcompensation "1"
 cl_predict "1"
 cl_predictweapons "1"
 
+//Change team ID overhead display
+cl_teamid_overhead_mode "1" //Makes it so game only shows triangles overhead when you aim at the person (decreases screen clutter)
+
 // disable mouse acceleration and enable raw input for low latency
 m_customaccel "0"
 m_rawinput "1"
@@ -42,16 +45,15 @@ m_mouseaccel1 "0"
 m_customaccel "0"
 
 // change game behavior when connecting to servers
-cl_forcepreload "1" // Preloads The Whole Map & Sounds.
+//cl_forcepreload "1" // Preloads The Whole Map & Sounds (COMMENTED OUT BECAUSE VALVE REMOVED THIS CVAR)
 cl_autohelp "0" //disables autohelp and messages
 cl_disablehtmlmotd "1" // Disables MOTD from community servers (SET TO 1 IF YOU SEEM TO HAVE ISSUES JOINING SERVERS)
 cl_showhelp "0"
 
 // change how things are rendered in csgo for more fps boost
-r_dynamic "1"			//There had been some speculation disabling this cause client issue so you must test this values yourself. 0 - disabled, 1 - enable
-r_drawtracers "0"
-r_drawtracers_firstperson "0"
- 
+r_dynamic "1" //There had been some speculation disabling this cause client issue so you must test this values yourself. 0 - disabled, 1 - enable
+r_drawtracers_firstperson "0" //Disables bullet tracers from your own gun
+
 fps_max "300" //Setting this to 0 will uncap it but will load maps 90 seconds slower. 
 // In ToppiOfficial's opinion is best to cap the fps about twice as the refresh rate of your monitor as pushing your frames to its max can cause fps jitter and stutter therefor only cap it what your twice the average fps (average of 60fps=120)(as there is no point capping like 300 if your rig can only handle like 80fps.
 
@@ -62,7 +64,6 @@ net_graphheight "32" //Changes the position of netgraph vertically
 net_graphpos "2" //Positioning of Net Graph (0=left 1=right 2=middle)
 net_graphproportionalfont "0" //Makes font smaller (0=small 1=large)
 //Net grap position is the user's preference so you should tweak this before removing the "//"
-
 net_graphmsecs "400" //The latency graph represents this many milliseconds
 net_graphshowinterp "1" //Shows interpolation value
 net_graphshowlatency "1" //Shows latency value
